# mock_aws_moto

./: .gitignore  Makefile  book_manager.py  book_store.py  conftest.py  new_book_handler.py  pyproject.toml  setup.py  test_book_manager.py  user_recommendation_handler.py
moto_examples/: Makefile  README.md  book_manager.py  book_store.py  dynamo_db.py  new_book_handler.py  serverless.yml
moto_examples/tests/: conftest.py  test_book_manager.py
tests/: conftest.py  test_new_book.py  test_user_recommendation.py
