[tool.poetry]
name = "mock-aws-python"
version = "0.1.0"
description = "Example of mocking aws services"
authors = ["Michael Camilo <michael.camilo@caylent.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.26.100"
moto = "^4.1.6"
pytest = "^7.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
